remove java.desktop dependency from common